---
source: bench/tests/plans/bsbm_explore.rs
expression: canonicalize_uuids(&string)
---
ProjectionExec: expr=[ENC_PT(first_value(product) ORDER BY [ENC_SORT(ENC_PT(productLabel)) ASC NULLS FIRST, product ASC NULLS FIRST]@2) as product, ENC_PT(first_value(productLabel) ORDER BY [ENC_SORT(ENC_PT(productLabel)) ASC NULLS FIRST, product ASC NULLS FIRST]@3) as productLabel]
  SortExec: TopK(fetch=5), expr=[ENC_SORT(ENC_PT(productLabel))@0 ASC, product@1 ASC], preserve_partitioning=[false], sort_prefix=[ENC_SORT(ENC_PT(productLabel))@0 ASC]
    AggregateExec: mode=Single, gby=[__common_expr_1@0 as ENC_SORT(ENC_PT(productLabel)), product@1 as product], aggr=[first_value(product) ORDER BY [ENC_SORT(ENC_PT(productLabel)) ASC NULLS FIRST, product ASC NULLS FIRST], first_value(productLabel) ORDER BY [ENC_SORT(ENC_PT(productLabel)) ASC NULLS FIRST, product ASC NULLS FIRST]], ordering_mode=PartiallySorted([0])
      ProjectionExec: expr=[ENC_SORT(ENC_PT(productLabel@1)) as __common_expr_1, product@0 as product, productLabel@1 as productLabel]
        SortExec: expr=[ENC_SORT(ENC_PT(productLabel@1)) ASC], preserve_partitioning=[false]
          NestedLoopJoinExec: join_type=Inner, filter=EBV(LT(join_proj_push_down_5@0, join_proj_push_down_7@2)) AND EBV(GT(join_proj_push_down_6@1, join_proj_push_down_8@3)), projection=[product@0, productLabel@1]
            ProjectionExec: expr=[product@0 as product, productLabel@1 as productLabel, simProperty2@2 as simProperty2, ENC_TV(simProperty2@2) as join_proj_push_down_5, ENC_TV(simProperty2@2) as join_proj_push_down_6]
              CoalesceBatchesExec: target_batch_size=8192
                NestedLoopJoinExec: join_type=Inner, filter=EBV(LT(join_proj_push_down_1@0, join_proj_push_down_3@2)) AND EBV(GT(join_proj_push_down_2@1, join_proj_push_down_4@3)), projection=[product@0, productLabel@1, simProperty2@3]
                  ProjectionExec: expr=[product@0 as product, productLabel@1 as productLabel, simProperty1@2 as simProperty1, simProperty2@3 as simProperty2, ENC_TV(simProperty1@2) as join_proj_push_down_1, ENC_TV(simProperty1@2) as join_proj_push_down_2]
                    CoalesceBatchesExec: target_batch_size=8192
                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, productLabel@1, simProperty1@2, simProperty2@4]
                        CoalesceBatchesExec: target_batch_size=8192
                          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, productLabel@1, simProperty1@3]
                            CoalesceBatchesExec: target_batch_size=8192
                              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, productLabel@2]
                                CoalesceBatchesExec: target_batch_size=8192
                                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(prodFeature@0, prodFeature@1)], projection=[product@1]
                                    MemQuadPatternExec: [GSPO] subject=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890>, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature>, object=?prodFeature
                                    CoalesceBatchesExec: target_batch_size=8192
                                      FilterExec: NOT EBV(EQ(1:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890, ENC_TV(product@0)))
                                        MemQuadPatternExec: [GPOS] subject=?product, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature>, object=?prodFeature
                                CoalesceBatchesExec: target_batch_size=8192
                                  FilterExec: NOT EBV(EQ(1:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890, ENC_TV(product@0)))
                                    MemQuadPatternExec: [GPOS] subject=?product, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object=?productLabel
                            CoalesceBatchesExec: target_batch_size=8192
                              FilterExec: NOT EBV(EQ(1:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890, ENC_TV(product@0)))
                                MemQuadPatternExec: [GPOS] subject=?product, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1>, object=?simProperty1
                        CoalesceBatchesExec: target_batch_size=8192
                          FilterExec: NOT EBV(EQ(1:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890, ENC_TV(product@0)))
                            MemQuadPatternExec: [GPOS] subject=?product, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric2>, object=?simProperty2
                  ProjectionExec: expr=[origProperty1@0 as origProperty1, ADD(ENC_TV(origProperty1@0), 9:120) as join_proj_push_down_3, SUB(ENC_TV(origProperty1@0), 9:120) as join_proj_push_down_4]
                    CoalesceBatchesExec: target_batch_size=8192
                      MemQuadPatternExec: [GSPO] subject=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890>, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1>, object=?origProperty1
            ProjectionExec: expr=[origProperty2@0 as origProperty2, ADD(ENC_TV(origProperty2@0), 9:170) as join_proj_push_down_7, SUB(ENC_TV(origProperty2@0), 9:170) as join_proj_push_down_8]
              CoalesceBatchesExec: target_batch_size=8192
                MemQuadPatternExec: [GSPO] subject=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product890>, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric2>, object=?origProperty2
